added and changed tests